--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@primer/css": "^14.3.0",
     "@vue/ui": "^0.11.6",
+    "black-scholes": "^1.1.0",
     "core-js": "^3.6.4",
     "ethers": "^4.0.47",
     "lodash": "^4.17.15",
     "primer-support": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
