--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^4.0.47",
     "lodash": "^4.17.15",
     "primer-support": "^5.0.0",
+    "volatility": "^0.2.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
